...
                ZStack{
                    Button(action: {
                        withAnimation {
                            
                    }
                    }){
                        Text("Zaloguj się")
                            .padding()
                            .background(gradient)
                            .foregroundColor(.white)
                            .cornerRadius(10)
                    }
                }
...
