...
                    withAnimation{
                        userAuth.logout()
                    }
                }
            }else {
                loadingAction = false
                errorname = "Nie istnieje taki użytkownik"
                errordetails = "Podaj poprawne dane"
                errorAction = true
            }
            
        }
        task.resume()
...
