...
                    
                    Button(action: {
                        getHomeData(filter: request)
                    }, label: {HStack{
                        Text("Odśwież Dane")
                        Spacer()
                        Image(systemName: "repeat.circle.fill")
                            .resizable()
                            .frame(width: 25.0, height: 25.0)
                            .accentColor(.gray)
                    }
                    })
                    
...
